Revert "Now notes don't overlap the tabs (should improve more later)", fix tabs rendering
This reverts commit 203bd5f2cdd251b6949f342b7042cb2ccb87c998.

--- a/plugin/style.css
+++ b/plugin/style.css
@@ -76,8 +76,8 @@
 
 
 /* UI - Match Ratios */
-.match-ratios-wrapper-outer {position:absolute;right: 181px;top: 7px;height: 224px;width: 225px;} /* Yes, a table... for complicated layout, vertical aligning to the bottom while scrolling when there are too many */
-#okcp .match-ratios-list {box-shadow: none;margin:0;padding:0;max-height: 235px;overflow-y: scroll;overflow-x:hidden;border-bottom: 1px solid #BBB;border-top: 1px solid #BBB;width: 100%;}
+.match-ratios-wrapper-outer {position:absolute;right: 181px;top: 2px;height: 224px;width: 225px;} /* Yes, a table... for complicated layout, vertical aligning to the bottom while scrolling when there are too many */
+#okcp .match-ratios-list {box-shadow: none;margin:0;padding:0;max-height: 210px;overflow-y: scroll;overflow-x:hidden;border-bottom: 1px solid #BBB;border-top: 1px solid #BBB;width: 100%;}
 #okcp .match-ratios-list::-webkit-scrollbar {-webkit-appearance: none;width: 7px;}
 #okcp .match-ratios-list::-webkit-scrollbar-thumb {border-radius: 4px;background-color: rgba(0,0,0,.5);box-shadow: 0 0 1px rgba(255,255,255,.5);}
 #okcp .match-ratios {vertical-align: bottom;}
@@ -304,7 +304,7 @@ background-position:0 0, -1px -5px;}
 .guilt {display:none;}
 
 /* Readd notes feature */
-#okcp #inline_notes {margin: 50px 0px 20px auto;width: 210px;}
+#okcp #inline_notes {width:300px;}
 .UI-change-btn {display:block;float: left;background: #f7f7f7;height:25px;width:60px;border: 1px solid #ddd;color:#555;text-align:center;padding:0 0px;font-family:verdana,sans-serif;font-weight:bold;font-size:10px;line-height:25px;position:relative;z-index:1000;cursor:pointer;}
 
 
@@ -335,7 +335,7 @@ html div#loveisblindday div.inner {background-color: rgb(0,15,45);margin-top: 27
 #p_profile #actions .wide-buttons-that-are-now-not-wide .flag {width:39px;padding:0;/*border-radius:0!important;*/}
 #p_profile #wrapper .tabbed_heading #actions .btn.hideflag.white {float: right;width: 108px;margin-bottom:0;}
 #p_profile #wrapper .tabbed_heading #actions .btn.hideflag.white a {width: 49px;border-radius:0!important;border-left:0!important;}
-
+.page_tabs {position: absolute;bottom: 0px;}
 
 #ajax_location {display:block;}
 
